# research-scaffold

./: .gitignore  .sky.yaml  CLAUDE.md  LICENSE  README.md  SWEEP_IMPLEMENTATION.md  __init__.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  research_scaffold_skypilot_compat.md  setup.py
example/: README.md  SWEEP_USAGE.md  main.py  sky_config.yaml
example/basic/: simple.yaml  with_logging.yaml  with_remote.yaml  with_remote_env.yaml
example/composition/: composed.yaml  grid_search.yaml  meta_with_common.yaml
example/configs/: simple_config.yaml  wandb_and_tags.yaml
example/functions/: examples.py  jason_examples.py  lennie_examples.py
example/meta_configs/: lennie_tests.yaml
example/remote_test/: test_shared_gpu.yaml
example/sweep_configs/: minimal_sweep.yaml  simple_sweep.yaml  sweep_with_meta_base.yaml
jrs_example/configs/: log_levels.yaml  simple_config.yaml
jrs_example/functions/: jason_examples.py  lennie_examples.py
research_scaffold/: __init__.py  argparsing.py  config_tools.py  file_io.py  plotting.py  remote_execution.py  types.py  util.py  wandb_analysis.py  wandb_hparam_subset_search.py  wandb_parameter_subset_search.py  wandb_run_processing.py
src/: config_tools.py  file_io.py  util.py
tests/: conftest.py  test_config_loading.py  test_execution.py  test_meta_config.py  test_resolve_config.py  test_sweep.py
tests/test_config_loading/: test_config_loading.py
tests/test_execution/: test_execution.py
tests/test_logging/: test_logging.py
tests/test_meta_config/: test_inline_configs.py  test_meta_config.py
(+86 files in other folders)
