[project]
name = "research-scaffold"
version = "0.1.0"
description = "Jason Brown's research scaffold"
readme = "README.md"

authors = [
    {name = "Jason Brown", email = "jasonrbrown135@gmail.com"},
    {name = "Lennie Wells"},
]
license = {file = "LICENSE"}

requires-python = ">=3.11"
dependencies = [
    "beartype>=0.22.5",
    "pyyaml>=6.0.3",
    "wandb>=0.23.0",
]


[project.urls]
Homepage = "https://github.com/jr-brown/research-scaffold"

[tool.setuptools]
packages = ["research_scaffold"]