[project]
name = "research-scaffold"
version = "0.1"
description = "Jason Brown's research scaffold"
authors = [
    { name = "Jason Brown and Lennie Wells", email = "jasonrbrown135@gmail.com" },
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "beartype",
    "wandb",
    "skypilot[vast]",
    "pyyaml",
    "tqdm",
    "GitPython",
    "vastai-sdk>=0.1.12",
]

[project.urls]
Homepage = "https://github.com/jr-brown/research-scaffold"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
